feat: some fixes

--- a/src/html/includes/main/journey.html
+++ b/src/html/includes/main/journey.html
@@ -1,71 +1,186 @@
 <section id="video" class="journey">
-    <div class="journey__container section-container">
-        <div class="journey-heading">
-            <h2 class="title">Video journey</h2>
-            <p class="journey-heading__desc-text">Enter and visit one of the most famous museums in the world and enjoy masterpieces such as Mona Lisa or Hammurabi's Code</p>
-        </div>
-        <div class="journey-player">
-            <video class="journey-player__video" src="./uploads/journey.mp4" muted poster="./img/journey/poster0.webp">              
-            </video>
-            <button class="journey-player__main-play-btn">
-              <svg class="journey-player__main-play-icon" width="220" height="220" viewBox="0 0 152 152" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M76 6.14334C89.8203 6.14065 103.331 10.2365 114.823 17.9129C126.315 25.5893 135.273 36.5014 140.563 49.2691C145.853 62.0368 147.238 76.0864 144.542 89.6413C141.846 103.196 135.192 115.647 125.419 125.419C115.647 135.192 103.196 141.846 89.6413 144.542C76.0864 147.238 62.0368 145.853 49.2691 140.563C36.5015 135.273 25.5893 126.315 17.9129 114.823C10.2365 103.331 6.14065 89.8203 6.14335 76C6.16863 57.4806 13.5366 39.727 26.6318 26.6318C39.727 13.5366 57.4806 6.16863 76 6.14334ZM76 0C60.9687 0 46.2748 4.45732 33.7767 12.8083C21.2785 21.1593 11.5374 33.0289 5.78516 46.916C0.0328994 60.8032 -1.47215 76.0843 1.46032 90.8269C4.3928 105.57 11.6311 119.111 22.2599 129.74C32.8887 140.369 46.4306 147.607 61.1732 150.539C75.9157 153.472 91.1965 151.967 105.084 146.215C118.971 140.463 130.841 130.721 139.192 118.224C147.543 105.725 152 91.0314 152 76C152 55.8436 143.993 36.5127 129.74 22.2599C115.488 8.00715 96.1566 0 76 0Z" fill="white"/>
-                <path d="M116.041 76L52.8737 34.4846C52.9556 97.0714 52.8737 66.3617 52.8737 117.515L116.041 76Z" fill="white"/>
-                </svg>
-            </button>
-            <div class="journey-player__navbar">
-                <button class="navbar__play-btn">
-                  <svg class="play-icon" width="23" height="31" viewBox="0 0 23 31" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M23 15.5053L0 0C0 23.3683 0 11.8996 0 31L23 15.5053Z" fill="#B3B3B3"/>
-                  </svg>
-                </button>
-                <input class="navbar__play-bar" type="range">
-                <button class="navbar__volume-btn">
-                  <svg class="volume-icon" width="38" height="31" viewBox="0 0 38 31" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M19.3511 0C18.875 0 18.4622 0.161587 18.1138 0.484761L8.9609 8.97374H1.76C1.28282 8.97374 0.871122 9.13533 0.522673 9.4585C0.174224 9.78167 0 10.1645 0 10.6061V20.3939C0 20.8355 0.174224 21.2183 0.522673 21.5415C0.871122 21.8647 1.28393 22.0263 1.76 22.0263H8.9609L18.1138 30.5152C18.4622 30.8384 18.8739 31 19.3511 31C19.8283 31 20.24 30.8384 20.5884 30.5152C20.9369 30.1921 21.1111 29.8102 21.1111 29.3677V1.63234C21.1111 1.1908 20.9369 0.807935 20.5895 0.484761C20.2422 0.161587 19.8294 0 19.3522 0H19.3511Z" fill="#B3B3B3"/>
-                    <path d="M29.5979 19.1322C30.3389 18.0151 30.7094 16.8082 30.7094 15.5103C30.7094 14.2125 30.3389 13.0014 29.5979 11.8751C28.8569 10.7487 27.8774 9.95512 26.6561 9.49425C26.4819 9.40952 26.2634 9.36612 26.0027 9.36612C25.5499 9.36612 25.1572 9.52422 24.8258 9.83939C24.4943 10.1566 24.3286 10.5431 24.3286 11.004C24.3286 11.3625 24.4331 11.6653 24.6432 11.9123C24.8532 12.1592 25.1044 12.3731 25.4011 12.5519C25.6966 12.7307 25.9932 12.927 26.2898 13.1409C26.5864 13.3548 26.8387 13.6565 27.0477 14.0492C27.2567 14.4419 27.3612 14.9286 27.3612 15.5083C27.3612 16.088 27.2567 16.5747 27.0477 16.9673C26.8387 17.36 26.5864 17.6628 26.2898 17.8756C25.9932 18.0885 25.6966 18.2859 25.4011 18.4646C25.1044 18.6434 24.8522 18.8573 24.6432 19.1043C24.4342 19.3512 24.3286 19.655 24.3286 20.0126C24.3286 20.4734 24.4954 20.8609 24.8258 21.1771C25.1572 21.4913 25.5488 21.6514 26.0027 21.6514C26.2634 21.6514 26.4819 21.6091 26.6561 21.5233C27.8763 21.0449 28.8569 20.2471 29.5979 19.1291V19.1322Z" fill="#B3B3B3"/>
-                    <path d="M35.7563 22.8582C37.252 20.6112 37.9999 18.1571 37.9999 15.499C37.9999 12.8419 37.252 10.3899 35.7563 8.13971C34.2605 5.89271 32.2811 4.25452 29.819 3.23039C29.591 3.14417 29.362 3.10001 29.1329 3.10001C28.6759 3.10001 28.2796 3.26509 27.9451 3.59525C27.6105 3.92541 27.4443 4.31551 27.4443 4.76764C27.4443 5.44479 27.7874 5.95685 28.4735 6.30489C29.4579 6.80855 30.1269 7.19023 30.4785 7.45099C31.7803 8.38891 32.7967 9.56445 33.5265 10.9797C34.2562 12.395 34.6216 13.9007 34.6216 15.5C34.6216 17.0972 34.2562 18.6039 33.5265 20.0203C32.7967 21.4356 31.7803 22.6111 30.4785 23.549C30.1269 23.8098 29.4579 24.1915 28.4735 24.6951C27.7874 25.0432 27.4443 25.5542 27.4443 26.2324C27.4443 26.6835 27.6116 27.0746 27.9451 27.4048C28.2785 27.7349 28.6833 27.9 29.1585 27.9C29.3694 27.9 29.59 27.8558 29.818 27.7696C32.28 26.7444 34.2605 25.1084 35.7552 22.8593L35.7563 22.8582Z" fill="#B3B3B3"/>
-                  </svg>
-                </button>
-                <input class="navbar__volume-bar" type="range">
-                <button class="navbar__fullscreen-btn">
-                  <svg class="fullscreen-icon" width="35" height="35" viewBox="0 0 35 35" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M30.6055 30.7513H22.4097V34.8638H34.7083V22.5069H30.6055V30.7513Z" fill="#B3B3B3"/>
-                    <path d="M4.10278 22.5069H0V34.8638H12.2986V30.7513H4.10278V22.5069Z" fill="#B3B3B3"/>
-                    <path d="M0 12.3569H4.10278V4.12222H12.2986V0H0V12.3569Z" fill="#B3B3B3"/>
-                    <path d="M22.4097 0V4.12222H30.6055V12.3569H34.7083V0H22.4097Z" fill="#B3B3B3"/>
-                    </svg>
-                </button>
-            </div>
-        </div>
-        <div class="journey-slider swiper">
-            <ul class="slider__list swiper-wrapper">
-                <li class="slider__list-item swiper-slide">
-                    <iframe class="slider-video" loading="lazy" width="300" height="220" src="https://www.youtube.com/embed/aWmJ5DgyWPI?rel=0&amp;mute=1" allowfullscreen></iframe>
-                </li>
-                <li class="slider__list-item swiper-slide">
-                    <iframe class="slider-video" loading="lazy" width="300" height="220" src="https://www.youtube.com/embed/Vi5D6FKhRmo?rel=0&amp;mute=1" allowfullscreen></iframe>
-                </li>
-                <li class="slider__list-item swiper-slide">
-                    <iframe class="slider-video" loading="lazy" width="300" height="220" src="https://www.youtube.com/embed/NOhDysLnTvY?rel=0&amp;mute=1" allowfullscreen></iframe>
-                </li>
-                <li class="slider__list-item swiper-slide">
-                    <iframe class="slider-video" loading="lazy" width="300" height="220" src="https://www.youtube.com/embed/NOhDysLnTvY?rel=0&amp;mute=1" allowfullscreen></iframe>
-                </li>
-                <li class="slider__list-item swiper-slide">
-                    <iframe class="slider-video" loading="lazy" width="300" height="220" src="https://www.youtube.com/embed/NOhDysLnTvY?rel=0&amp;mute=1" allowfullscreen></iframe>
-                </li>
-                <li class="slider__list-item swiper-slide">
-                    <iframe class="slider-video" loading="lazy" width="300" height="220" src="https://www.youtube.com/embed/NOhDysLnTvY?rel=0&amp;mute=1" allowfullscreen></iframe>
-                </li>
-            </ul>
-            <div class="slider-pagination swiper-pagination"></div>
-            <svg class="slider-next-btn swiper-button-next" width="30" height="40" viewBox="0 0 30 40" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M4.26785 39.4674L29.2678 21.2851C29.7367 20.9443 30 20.4818 30 19.9996C30 19.5173 29.7365 19.0548 29.2677 18.7139L4.26768 0.532545C3.29135 -0.177515 1.70852 -0.177515 0.732188 0.532545C-0.243978 1.24248 -0.244145 2.39376 0.732188 3.10382L23.9643 19.9996L0.732188 36.8962C0.244021 37.2512 2.05636e-05 37.7165 2.05636e-05 38.1819C2.05636e-05 38.6472 0.24402 39.1125 0.732353 39.4676C1.70869 40.1775 3.29152 40.1775 4.26785 39.4674Z" fill="#B3B3B3"/>
-              </svg>
-            <svg class="slider-prev-btn swiper-button-prev" width="30" height="40" viewBox="0 0 30 40" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M25.7321 0.532564L0.732166 18.7149C0.263333 19.0557 0 19.5182 0 20.0004C0 20.4827 0.263499 20.9452 0.732332 21.2861L25.7323 39.4675C26.7086 40.1775 28.2915 40.1775 29.2678 39.4675C30.244 38.7575 30.2441 37.6062 29.2678 36.8962L6.03566 20.0004L29.2678 3.10383C29.756 2.7488 30 2.28347 30 1.81814C30 1.3528 29.756 0.887472 29.2676 0.532442C28.2913 -0.177497 26.7085 -0.177496 25.7321 0.532564Z" fill="#B3B3B3"/>
-                </svg>
-        </div>
+  <div class="journey__container section-container">
+    <div class="journey-heading">
+      <h2 class="title">Video journey</h2>
+      <p class="journey-heading__desc-text">
+        Enter and visit one of the most famous museums in the world and enjoy masterpieces such as
+        Mona Lisa or Hammurabi's Code
+      </p>
     </div>
+    <div class="journey-player">
+      <video
+        class="journey-player__video"
+        src="./uploads/journey.mp4"
+        muted
+        poster="./img/journey/poster0.webp"
+      ></video>
+      <button class="journey-player__main-play-btn">
+        <svg
+          class="journey-player__main-play-icon"
+          width="220"
+          height="220"
+          viewBox="0 0 152 152"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="M76 6.14334C89.8203 6.14065 103.331 10.2365 114.823 17.9129C126.315 25.5893 135.273 36.5014 140.563 49.2691C145.853 62.0368 147.238 76.0864 144.542 89.6413C141.846 103.196 135.192 115.647 125.419 125.419C115.647 135.192 103.196 141.846 89.6413 144.542C76.0864 147.238 62.0368 145.853 49.2691 140.563C36.5015 135.273 25.5893 126.315 17.9129 114.823C10.2365 103.331 6.14065 89.8203 6.14335 76C6.16863 57.4806 13.5366 39.727 26.6318 26.6318C39.727 13.5366 57.4806 6.16863 76 6.14334ZM76 0C60.9687 0 46.2748 4.45732 33.7767 12.8083C21.2785 21.1593 11.5374 33.0289 5.78516 46.916C0.0328994 60.8032 -1.47215 76.0843 1.46032 90.8269C4.3928 105.57 11.6311 119.111 22.2599 129.74C32.8887 140.369 46.4306 147.607 61.1732 150.539C75.9157 153.472 91.1965 151.967 105.084 146.215C118.971 140.463 130.841 130.721 139.192 118.224C147.543 105.725 152 91.0314 152 76C152 55.8436 143.993 36.5127 129.74 22.2599C115.488 8.00715 96.1566 0 76 0Z"
+            fill="white"
+          />
+          <path
+            d="M116.041 76L52.8737 34.4846C52.9556 97.0714 52.8737 66.3617 52.8737 117.515L116.041 76Z"
+            fill="white"
+          />
+        </svg>
+      </button>
+      <div class="journey-player__navbar">
+        <button class="navbar__play-btn">
+          <svg
+            class="play-icon"
+            width="23"
+            height="31"
+            viewBox="0 0 23 31"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path d="M23 15.5053L0 0C0 23.3683 0 11.8996 0 31L23 15.5053Z" fill="#B3B3B3" />
+          </svg>
+        </button>
+        <input class="navbar__play-bar" type="range" />
+        <button class="navbar__volume-btn">
+          <svg
+            class="volume-icon"
+            width="38"
+            height="31"
+            viewBox="0 0 38 31"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M19.3511 0C18.875 0 18.4622 0.161587 18.1138 0.484761L8.9609 8.97374H1.76C1.28282 8.97374 0.871122 9.13533 0.522673 9.4585C0.174224 9.78167 0 10.1645 0 10.6061V20.3939C0 20.8355 0.174224 21.2183 0.522673 21.5415C0.871122 21.8647 1.28393 22.0263 1.76 22.0263H8.9609L18.1138 30.5152C18.4622 30.8384 18.8739 31 19.3511 31C19.8283 31 20.24 30.8384 20.5884 30.5152C20.9369 30.1921 21.1111 29.8102 21.1111 29.3677V1.63234C21.1111 1.1908 20.9369 0.807935 20.5895 0.484761C20.2422 0.161587 19.8294 0 19.3522 0H19.3511Z"
+              fill="#B3B3B3"
+            />
+            <path
+              d="M29.5979 19.1322C30.3389 18.0151 30.7094 16.8082 30.7094 15.5103C30.7094 14.2125 30.3389 13.0014 29.5979 11.8751C28.8569 10.7487 27.8774 9.95512 26.6561 9.49425C26.4819 9.40952 26.2634 9.36612 26.0027 9.36612C25.5499 9.36612 25.1572 9.52422 24.8258 9.83939C24.4943 10.1566 24.3286 10.5431 24.3286 11.004C24.3286 11.3625 24.4331 11.6653 24.6432 11.9123C24.8532 12.1592 25.1044 12.3731 25.4011 12.5519C25.6966 12.7307 25.9932 12.927 26.2898 13.1409C26.5864 13.3548 26.8387 13.6565 27.0477 14.0492C27.2567 14.4419 27.3612 14.9286 27.3612 15.5083C27.3612 16.088 27.2567 16.5747 27.0477 16.9673C26.8387 17.36 26.5864 17.6628 26.2898 17.8756C25.9932 18.0885 25.6966 18.2859 25.4011 18.4646C25.1044 18.6434 24.8522 18.8573 24.6432 19.1043C24.4342 19.3512 24.3286 19.655 24.3286 20.0126C24.3286 20.4734 24.4954 20.8609 24.8258 21.1771C25.1572 21.4913 25.5488 21.6514 26.0027 21.6514C26.2634 21.6514 26.4819 21.6091 26.6561 21.5233C27.8763 21.0449 28.8569 20.2471 29.5979 19.1291V19.1322Z"
+              fill="#B3B3B3"
+            />
+            <path
+              d="M35.7563 22.8582C37.252 20.6112 37.9999 18.1571 37.9999 15.499C37.9999 12.8419 37.252 10.3899 35.7563 8.13971C34.2605 5.89271 32.2811 4.25452 29.819 3.23039C29.591 3.14417 29.362 3.10001 29.1329 3.10001C28.6759 3.10001 28.2796 3.26509 27.9451 3.59525C27.6105 3.92541 27.4443 4.31551 27.4443 4.76764C27.4443 5.44479 27.7874 5.95685 28.4735 6.30489C29.4579 6.80855 30.1269 7.19023 30.4785 7.45099C31.7803 8.38891 32.7967 9.56445 33.5265 10.9797C34.2562 12.395 34.6216 13.9007 34.6216 15.5C34.6216 17.0972 34.2562 18.6039 33.5265 20.0203C32.7967 21.4356 31.7803 22.6111 30.4785 23.549C30.1269 23.8098 29.4579 24.1915 28.4735 24.6951C27.7874 25.0432 27.4443 25.5542 27.4443 26.2324C27.4443 26.6835 27.6116 27.0746 27.9451 27.4048C28.2785 27.7349 28.6833 27.9 29.1585 27.9C29.3694 27.9 29.59 27.8558 29.818 27.7696C32.28 26.7444 34.2605 25.1084 35.7552 22.8593L35.7563 22.8582Z"
+              fill="#B3B3B3"
+            />
+          </svg>
+        </button>
+        <input class="navbar__volume-bar" type="range" />
+        <button class="navbar__fullscreen-btn">
+          <svg
+            class="fullscreen-icon"
+            width="35"
+            height="35"
+            viewBox="0 0 35 35"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M30.6055 30.7513H22.4097V34.8638H34.7083V22.5069H30.6055V30.7513Z"
+              fill="#B3B3B3"
+            />
+            <path d="M4.10278 22.5069H0V34.8638H12.2986V30.7513H4.10278V22.5069Z" fill="#B3B3B3" />
+            <path d="M0 12.3569H4.10278V4.12222H12.2986V0H0V12.3569Z" fill="#B3B3B3" />
+            <path d="M22.4097 0V4.12222H30.6055V12.3569H34.7083V0H22.4097Z" fill="#B3B3B3" />
+          </svg>
+        </button>
+      </div>
+    </div>
+    <div class="journey-slider swiper">
+      <ul class="slider__list swiper-wrapper">
+        <li class="slider__list-item swiper-slide">
+          <iframe
+            class="slider-video"
+            loading="lazy"
+            width="300"
+            height="220"
+            src="https://www.youtube.com/embed/aWmJ5DgyWPI?rel=0&amp;mute=1"
+            allowfullscreen
+          ></iframe>
+        </li>
+        <li class="slider__list-item swiper-slide">
+          <iframe
+            class="slider-video"
+            loading="lazy"
+            width="300"
+            height="220"
+            src="https://www.youtube.com/embed/Vi5D6FKhRmo?rel=0&amp;mute=1"
+            allowfullscreen
+          ></iframe>
+        </li>
+        <li class="slider__list-item swiper-slide">
+          <iframe
+            class="slider-video"
+            loading="lazy"
+            width="300"
+            height="220"
+            src="https://www.youtube.com/embed/NOhDysLnTvY?rel=0&amp;mute=1"
+            allowfullscreen
+          ></iframe>
+        </li>
+        <li class="slider__list-item swiper-slide">
+          <iframe
+            class="slider-video"
+            loading="lazy"
+            width="300"
+            height="220"
+            src="https://www.youtube.com/embed/NOhDysLnTvY?rel=0&amp;mute=1"
+            allowfullscreen
+          ></iframe>
+        </li>
+        <li class="slider__list-item swiper-slide">
+          <iframe
+            class="slider-video"
+            loading="lazy"
+            width="300"
+            height="220"
+            src="https://www.youtube.com/embed/NOhDysLnTvY?rel=0&amp;mute=1"
+            allowfullscreen
+          ></iframe>
+        </li>
+        <li class="slider__list-item swiper-slide">
+          <iframe
+            class="slider-video"
+            loading="lazy"
+            width="300"
+            height="220"
+            src="https://www.youtube.com/embed/NOhDysLnTvY?rel=0&amp;mute=1"
+            allowfullscreen
+          ></iframe>
+        </li>
+      </ul>
+      <div class="slider-pagination swiper-pagination"></div>
+      <svg
+        class="slider-next-btn swiper-button-next"
+        width="30"
+        height="40"
+        viewBox="0 0 30 40"
+        fill="none"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <path
+          d="M4.26785 39.4674L29.2678 21.2851C29.7367 20.9443 30 20.4818 30 19.9996C30 19.5173 29.7365 19.0548 29.2677 18.7139L4.26768 0.532545C3.29135 -0.177515 1.70852 -0.177515 0.732188 0.532545C-0.243978 1.24248 -0.244145 2.39376 0.732188 3.10382L23.9643 19.9996L0.732188 36.8962C0.244021 37.2512 2.05636e-05 37.7165 2.05636e-05 38.1819C2.05636e-05 38.6472 0.24402 39.1125 0.732353 39.4676C1.70869 40.1775 3.29152 40.1775 4.26785 39.4674Z"
+          fill="#B3B3B3"
+        />
+      </svg>
+      <svg
+        class="slider-prev-btn swiper-button-prev"
+        width="30"
+        height="40"
+        viewBox="0 0 30 40"
+        fill="none"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <path
+          d="M25.7321 0.532564L0.732166 18.7149C0.263333 19.0557 0 19.5182 0 20.0004C0 20.4827 0.263499 20.9452 0.732332 21.2861L25.7323 39.4675C26.7086 40.1775 28.2915 40.1775 29.2678 39.4675C30.244 38.7575 30.2441 37.6062 29.2678 36.8962L6.03566 20.0004L29.2678 3.10383C29.756 2.7488 30 2.28347 30 1.81814C30 1.3528 29.756 0.887472 29.2676 0.532442C28.2913 -0.177497 26.7085 -0.177496 25.7321 0.532564Z"
+          fill="#B3B3B3"
+        />
+      </svg>
+    </div>
+  </div>
 </section>
