--- a/src/scss/_reboot.scss
+++ b/src/scss/_reboot.scss
@@ -1,16 +1,16 @@
 html,
 body {
-    margin-left: auto;
-    margin-right: auto;
-    min-height: 100vh;
-    min-width: 320px;
-    width: 100%;
-    font-family: 'Roboto', sans-serif;
-    font-style: normal;
+  margin-left: auto;
+  margin-right: auto;
+  min-height: 100vh;
+  min-width: 320px;
+  width: 100%;
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
 }
 
 body {
-    overflow-x: hidden;
+  overflow-x: hidden;
 }
 
 ul,
@@ -23,14 +23,14 @@ h3,
 h4,
 h5,
 h6 {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 li {
-    list-style: none;
+  list-style: none;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
