--- a/src/scss/sections/_explore.scss
+++ b/src/scss/sections/_explore.scss
@@ -1,115 +1,115 @@
 .explore {
+  width: 100%;
+  height: 100%;
+  background-color: var(--palette-primary-main);
+  &__container {
+    display: flex;
+    justify-content: space-between;
+    gap: 30px;
+    @include media-breakpoint-down(xl) {
+      flex-direction: column;
+      align-items: center;
+    }
+  }
+  &__comparison {
+    height: 700px;
+    width: 95vmin;
+    position: relative;
+    overflow: hidden;
+    @include media-breakpoint-down(lg) {
+      height: 500px;
+    }
+    @include media-breakpoint-down(sm) {
+      height: 400px;
+    }
+  }
+  &__comparison-after {
     width: 100%;
     height: 100%;
-    background-color: var(--palette-primary-main);
-    &__container {
-        display: flex;
-        justify-content: space-between;
-        gap: 30px;
-        @include media-breakpoint-down(xl) {
-            flex-direction: column;
-            align-items: center;
-        }
+    position: absolute;
+    clip-path: polygon(0 0, 50% 0, 50% 100%, 0 100%);
+    z-index: 1;
+    object-fit: cover;
+  }
+  &__comparison-before {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    object-fit: cover;
+  }
+  &__comparison-divisor {
+    position: relative;
+    -webkit-appearance: none;
+    width: calc(100% + 40px);
+    height: 100%;
+    margin-left: -20px;
+    background-color: transparent;
+    outline: none;
+    z-index: 2;
+    &::-webkit-slider-thumb {
+      position: relative;
+      -webkit-appearance: none;
+      height: 40px;
+      width: 40px;
+      border: 3px solid #ffffff;
+      border-radius: 50%;
+      background-size: contain;
+      cursor: pointer;
     }
-    &__comparison {
-        height: 700px;
-        width: 95vmin;
-        position: relative;
-        overflow: hidden;
-        @include media-breakpoint-down(lg) {
-            height: 500px;
-        }
-        @include media-breakpoint-down(sm) {
-            height: 400px;
-        }
-    }
-    &__comparison-after {
-        width: 100%;
-        height: 100%;
-        position: absolute;
-        clip-path: polygon(0 0, 50% 0, 50% 100%, 0 100%);
-        z-index: 1;
-        object-fit: cover;
-    }
-    &__comparison-before {
-        width: 100%;
-        height: 100%;
-        position: absolute;
-        object-fit: cover;
-    }
-    &__comparison-divisor {
-        position: relative;
-        -webkit-appearance: none;
-        width: calc( 100% + 40px);
-        height: 100%;
-        margin-left: -20px;
-        background-color: transparent;
-        outline: none;
-        z-index: 2;
-        &::-webkit-slider-thumb {
-            position: relative;
-            -webkit-appearance: none;
-            height: 40px;
-            width: 40px;
-            border: 3px solid #ffffff;
-            border-radius: 50%;
-            background-size: contain;
-            cursor: pointer;
-        }
-    }
-    &__comparison-undertext {
-        position: absolute;
-        color: var(--palette-primary-text);
-        font-family: 'Roboto';
-        font-weight: 300;
-        font-size: 16px;
-        text-align: center;
-    }
+  }
+  &__comparison-undertext {
+    position: absolute;
+    color: var(--palette-primary-text);
+    font-family: "Roboto";
+    font-weight: 300;
+    font-size: 16px;
+    text-align: center;
+  }
 }
 
 .explore-left {
-    max-width: 695px;
+  max-width: 695px;
+  @include media-breakpoint-down(xl) {
+    max-width: 100%;
+  }
+  &__title {
+    padding-bottom: 25px;
+    border-bottom: 3px solid var(--palette-primary-dark);
+    .title {
+      color: var(--palette-primary-text);
+      @include media-breakpoint-down(xxl) {
+        white-space: normal;
+      }
+    }
+  }
+  &__desc {
+    margin-top: 75px;
+    display: grid;
+    gap: 25px;
+    @include media-breakpoint-down(xxl) {
+      margin-top: 60px;
+    }
+    @include media-breakpoint-down(lg) {
+      display: none;
+    }
+  }
+  &__desc-text {
+    font-family: "Roboto", sans-serif;
+    font-weight: 300;
+    font-size: 22px;
+    line-height: 38px;
+    color: var(--palette-primary-text);
+    .text-marker {
+      color: var(--palette-tertiary-text);
+    }
+    @include media-breakpoint-down(xxl) {
+      font-size: 18px;
+    }
     @include media-breakpoint-down(xl) {
-        max-width: 100%;
+      font-size: 20px;
+      &:last-child {
+        display: none;
+      }
     }
-    &__title {
-        padding-bottom: 25px;
-        border-bottom: 3px solid var(--palette-primary-dark);
-        .title {
-            color: var(--palette-primary-text);
-            @include media-breakpoint-down(xxl) {
-                white-space: normal;
-            }
-        }
-    }
-    &__desc {
-        margin-top: 75px;
-        display: grid;
-        gap: 25px;
-        @include media-breakpoint-down(xxl) {
-            margin-top: 60px;
-        }
-        @include media-breakpoint-down(lg) {
-            display: none;
-        }
-    }
-    &__desc-text {
-        font-family: 'Roboto', sans-serif;
-        font-weight: 300;
-        font-size: 22px;
-        line-height: 38px;
-        color: var(--palette-primary-text);
-        .text-marker {
-            color: var(--palette-tertiary-text);
-        }
-        @include media-breakpoint-down(xxl) {
-            font-size: 18px;
-        }
-        @include media-breakpoint-down(xl) {
-            font-size: 20px;
-            &:last-child {
-                display: none;
-            }
-        }
-    }
+  }
 }
