--- a/src/scss/sections/_visiting.scss
+++ b/src/scss/sections/_visiting.scss
@@ -1,132 +1,133 @@
 .visiting {
+  width: 100%;
+  height: 100%;
+  &__container {
+    display: flex;
+    flex-direction: column;
+    @include media-breakpoint-down(xxl) {
+      max-width: 1100px;
+    }
+  }
+  &__title {
+    width: 100%;
+    display: flex;
+    padding-bottom: 25px;
+    border-bottom: 3px solid var(--palette-primary-dark);
+    @include media-breakpoint-down(lg) {
+      padding-bottom: 20px;
+    }
+  }
+  &__title-text {
+    font-family: "Forum", serif;
+    font-weight: 400;
+    font-size: 70px;
+    letter-spacing: 5px;
+    line-height: 90px;
+    text-transform: uppercase;
+    color: var(--palette-tertiary-text);
+    @include media-breakpoint-down(xxl) {
+      font-size: 60px;
+    }
+    @include media-breakpoint-down(xl) {
+      font-size: 50px;
+    }
+    @include media-breakpoint-down(lg) {
+      font-size: 40px;
+    }
+    @include media-breakpoint-down(md) {
+      font-size: 28px;
+    }
+  }
+  &__cards {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 60px;
+    margin-top: 75px;
+    @include media-breakpoint-down(xxl) {
+      gap: 40px;
+      padding-right: 60px;
+      padding-left: 60px;
+    }
+    @include media-breakpoint-down(xl) {
+      padding-right: 40px;
+      padding-left: 40px;
+    }
+    @include media-breakpoint-down(lg) {
+      gap: 30px;
+      margin-top: 40px;
+      padding-right: 10px;
+      padding-left: 10px;
+    }
+    @include media-breakpoint-down(sm) {
+    }
+  }
+  &__card-link {
+    display: flex;
+    transition-duration: 0.3s;
+    &:hover {
+      transform: scale(1.03);
+      ~ .visiting__card-title {
+        &::after {
+          width: 100%;
+        }
+      }
+    }
+  }
+  &__card-img {
+    max-width: 440px;
+    max-height: 285px;
     width: 100%;
     height: 100%;
-    &__container {
-        display: flex;
-        flex-direction: column;
-        @include media-breakpoint-down(xxl) {
-            max-width: 1100px;
-        }
+    object-fit: cover;
+    @include media-breakpoint-down(xl) {
+      max-width: 330px;
+      max-height: 215px;
     }
-    &__title {
-        width: 100%;
-        display: flex;
-        padding-bottom: 25px;
-        border-bottom: 3px solid var(--palette-primary-dark);
-        @include media-breakpoint-down(lg) {
-            padding-bottom: 20px;
-        }
+    @include media-breakpoint-down(md) {
+      max-width: 280px;
+      max-height: 180px;
     }
-    &__title-text {
-        font-family: 'Forum', serif;
-        font-weight: 400;
-        font-size: 70px;
-        letter-spacing: 5px;
-        line-height: 90px;
-        text-transform: uppercase;
-        color: var(--palette-tertiary-text);
-        @include media-breakpoint-down(xxl) {
-            font-size: 60px;
-        }
-        @include media-breakpoint-down(xl) {
-            font-size: 50px;
-        }
-        @include media-breakpoint-down(lg) {
-            font-size: 40px;
-        }
-        @include media-breakpoint-down(md) {
-            font-size: 28px;
-        }
+  }
+  &__card-title {
+    position: relative;
+    font-family: "Forum", serif;
+    font-weight: 400;
+    font-size: 32px;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+    color: var(--palette-secondary-text);
+    margin-top: 25px;
+    padding-bottom: 10px;
+    &::after {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 70%;
+      height: 2px;
+      background-color: var(--palette-primary-dark);
+      transition: 0.4s;
     }
-    &__cards {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        gap: 60px;
-        margin-top: 75px;
-        @include media-breakpoint-down(xxl) {
-            gap: 40px;
-            padding-right: 60px;
-            padding-left: 60px;
-        }
-        @include media-breakpoint-down(xl) {
-            padding-right: 40px;
-            padding-left: 40px;
-        }
-        @include media-breakpoint-down(lg) {
-            gap: 30px;
-            margin-top: 40px;
-            padding-right: 10px;
-            padding-left: 10px;
-        }
-        @include media-breakpoint-down(sm) {}
+    @include media-breakpoint-down(xl) {
+      font-size: 23px;
     }
-    &__card-link {
-        display: flex;
-        transition-duration: 0.3s;
-        &:hover {
-            transform: scale(1.03);
-            ~.visiting__card-title {
-                &::after {
-                    width: 100%;
-                }
-            }
-        }
+    @include media-breakpoint-down(md) {
+      font-size: 18px;
     }
-    &__card-img {
-        max-width: 440px;
-        max-height: 285px;
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        @include media-breakpoint-down(xl) {
-            max-width: 330px;
-            max-height: 215px;
-        }
-        @include media-breakpoint-down(md) {
-            max-width: 280px;
-            max-height: 180px;
-        }
+  }
+  &__card-desc {
+    margin-top: 10px;
+    font-family: "Roboto", sans-serif;
+    font-weight: 100;
+    font-size: 22px;
+    line-height: 26px;
+    color: var(--palette-secondary-text);
+    @include media-breakpoint-down(xl) {
+      font-size: 18px;
     }
-    &__card-title {
-        position: relative;
-        font-family: 'Forum', serif;
-        font-weight: 400;
-        font-size: 32px;
-        letter-spacing: 3px;
-        text-transform: uppercase;
-        color: var(--palette-secondary-text);
-        margin-top: 25px;
-        padding-bottom: 10px;
-        &::after {
-            content: "";
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            width: 70%;
-            height: 2px;
-            background-color: var(--palette-primary-dark);
-            transition: 0.4s;
-        }
-        @include media-breakpoint-down(xl) {
-            font-size: 23px;
-        }
-        @include media-breakpoint-down(md) {
-            font-size: 18px;
-        }
+    @include media-breakpoint-down(md) {
+      font-size: 15px;
     }
-    &__card-desc {
-        margin-top: 10px;
-        font-family: 'Roboto', sans-serif;
-        font-weight: 100;
-        font-size: 22px;
-        line-height: 26px;
-        color: var(--palette-secondary-text);
-        @include media-breakpoint-down(xl) {
-            font-size: 18px;
-        }
-        @include media-breakpoint-down(md) {
-            font-size: 15px;
-        }
-    }
+  }
 }
