--- a/src/scss/sections/header/burger.scss
+++ b/src/scss/sections/header/burger.scss
@@ -50,15 +50,13 @@
 .burger-menu {
     display: none;
     flex-direction: column;
-    max-height: 515px;
-    height: 100%;
+    height: 600px;
     position: absolute;
     transform: translateX(-100%);
-    top: 115px;
+    top: 100%;
     left: 0;
     background-color: var(--palette-primary-main);
-    padding-left: 25px;
-    padding-right: 25px;
+    padding: 25px;
     z-index: 4;
     transition: 0.5s;
     gap: 10px;
@@ -93,6 +91,7 @@
             display: flex;
             flex-direction: column;
             align-items: flex-start;
+            gap: 10px;
         }
         &__list-item {
             display: flex;
@@ -103,7 +102,7 @@
                 align-items: center;
                 .nav__list-link-text {
                     max-width: 150px;
-                    font-family: 'Roboto', sans-serif;
+                    font-family: "Roboto", sans-serif;
                     font-weight: 100;
                     font-size: 22px;
                     letter-spacing: 2px;
